--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.9.8",
     "esri-loader": "^3.7.0",
     "leaflet": "^1.9.4",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
     "sanqifrontend": "file:",
