--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sanqifrontend": "file:",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
+    "vue3-seamless-scroll": "^3.0.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
