--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.4",
+    "cobe": "^0.6.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.9.8",
     "esri-loader": "^3.7.0",
@@ -19,6 +20,7 @@
     "sanqifrontend": "file:",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
+    "vue-use-spring": "^0.3.3",
     "vue3-seamless-scroll": "^3.0.2",
     "vuex": "^4.0.2"
   },
