--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sanqifrontend": "file:",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
+    "vue-use-spring": "^0.3.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
