--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vue-use-spring": "^0.3.3",
+    "vue3-seamless-scroll": "^3.0.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
