--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --no-lint",
+    "serve": "vue-cli-service serve --no-lint --host 0.0.0.0",
     "build": "vue-cli-service build --no-lint",
     "lint": "vue-cli-service lint"
   },
@@ -20,6 +20,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
+    "proj4": "^2.17.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vue-use-spring": "^0.3.3",
@@ -30,9 +31,9 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@stagewise/toolbar-vue": "^0.1.2",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
